# research-agent

./: .env  .env.example  .gitignore  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .ruff.toml  Dockerfile  README.md  acl_crawler.py  pyproject.toml
backend/app/: logging.py  logging_config.json  main.py  models.py  utils.py
backend/app/api/: __init__.py
backend/app/api/routes/: crawlers.py  papers.py
backend/app/core/: config.py  db.py
backend/app/repos/: __init__.py  base_repo.py  crawler_repo.py  paper_repo.py
backend/app/services/: crawler.py
backend/app/tools/crawlers/: __init__.py  acl_anthology.py  base.py
backend/app/tools/parsers/: __init__.py  pdf.py
backend/tests/: conftest.py
backend/tests/core/: test_db.py
backend/tests/repos/: test_base_repo.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: generate-models.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: modal.tsx
frontend/src/components/modal/: modal.module.css  modal.tsx
frontend/src/features/: index.ts
frontend/src/features/paper-search/: types.ts
frontend/src/features/paper-search/api/: searchApi.ts
frontend/src/features/paper-search/components/: PaperDetailModal.tsx  SearchForm.tsx  SearchResultCard.tsx  index.ts
frontend/src/features/paper-search/hooks/: useSearchPapers.ts
frontend/src/features/paper-search/pages/: SearchPage.tsx
frontend/src/features/paperSearch/api/: searchApi.ts
frontend/src/features/paperSearch/components/: PaperDetailModal.tsx  SearchForm.tsx  SearchResultCard.tsx
frontend/src/features/paperSearch/components/PaperDetailModal/: PaperDetailModal.module.css  PaperDetailModal.tsx
frontend/src/features/paperSearch/components/SearchForm/: SearchForm.module.css  SearchForm.tsx
frontend/src/features/paperSearch/components/SearchResultCard/: SearchResultCard.module.css  SearchResultCard.tsx
frontend/src/features/paperSearch/hooks/: useSearchPapers.ts
frontend/src/features/paperSearch/pages/: searchPage.tsx
frontend/src/features/paperSearch/pages/SearchPage/: searchPage.module.css  searchPage.tsx
frontend/src/hooks/: useSearchPapers.ts
frontend/src/layouts/: Header.tsx  Sidebar.tsx
frontend/src/layouts/Header/: Header.module.css  Header.tsx
frontend/src/layouts/MainLayout/: MainLayout.module.css  MainLayout.tsx
frontend/src/layouts/Sidebar/: Sidebar.module.css  Sidebar.tsx
frontend/src/mocks/: searchPapers.mock.ts
frontend/src/shared/api/: client.ts  config.ts  index.ts  models.ts  openapi.gen.ts
frontend/src/shared/components/: index.ts
frontend/src/shared/components/layout/: MainLayout.tsx
frontend/src/shared/components/ui/: Button.tsx  Dialog.tsx  Label.tsx  Modal.tsx  Select.tsx
frontend/src/types/: openapi.ts  paper.types.ts
