[project]
name = "research-agent-api"
version = "0.1.0"
description = "Backend API for an intelligent agent for automating literature review and scientific discovery: finds, analyzes, and summarizes research papers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.12.13",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "types-aiofiles>=24.1.0.20250708",
]
